2012-12-06  Julien Bect  <julien.bect@supelec.fr>

	Removed some internal ".a" fields.

	* core/stk_ortho_func.m: modified
	* core/stk_make_matcov.m: modified

2012-12-05  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_predict() to make it work with non-stationary
	covariance functions.

	* core/stk_predict.m: modified

	Added a "pairwise" option to stk_make_matcov().

	* core/stk_make_matcov.m: modified

2012-12-04  Julien Bect  <julien.bect@supelec.fr>

	Added a "pairwise" option to all covariance functions.

	* covfcs/stk_materncov*.m: modified

2012-12-02  Julien Bect  <julien.bect@supelec.fr>

	Added a new MEX-file to compute distances "pairwise" (i.e.,
	compute only the diagonal of the full distance matrix).

	* misc/dist/stk_distance_matrix.c: deleted
	* misc/dist/stk_mex.h: new C header
	* misc/dist/stk_dist_matrixx.c: new MEX-file
	* misc/dist/stk_dist_matrixy.c: new MEX-file
	* misc/dist/stk_dist_pairwise.c: new MEX-file
	* misc/config/stk_compile_all.m: modified
	* misc/dist/stk_mindist.c: modified
	* misc/dist/stk_filldist.c: modified

	Renamed stk_distancematrix() to stk_dist().

	* misc/dist/stk_distance_matrix.m: renamed
	* misc/dist/stk_filldist.m: modified
	* covfcs/stk_materncov*.m: modified

	All stk_materncov* functions now also accepts simple matrix-type
	arguments.

	* covfcs/stk_materncov*.m: modified

2012-12-01  Julien Bect  <julien.bect@supelec.fr>

	Fixed a typo in the documentation of stk_is_lhs().

	* misc/test/stk_is_lhs.m: modified

	Fixed a bug in stk_runexamples().

	* misc/test/stk_runexamples.m: modified

2012-11-29  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_predict() to return the posterior covariance matrix
	as a fourth output argument.

	* core/stk_predict.m: modified

2012-11-26  Julien Bect  <julien.bect@supelec.fr>

	Modified all stk_sampling* functions to use stk_rescale()
	and stk_assert_box().

	* sampling/stk_sampling_olhs.m: modified
	* sampling/stk_sampling_randunif.m: modified