@@ -1,3 +1,9 @@
+2012-12-07  Julien Bect  <julien.bect@supelec.fr>
+
+	Minor improvement in stk_runexamples.
+
+	* misc/test/stk_runexamples.m: modified
+
 2012-12-06  Julien Bect  <julien.bect@supelec.fr>
 
 	Removed some internal ".a" fields.
